--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,7 +10,10 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-scripts": "5.0.1",
+    "react-switch": "^7.1.0",
+    "react-switchery": "^1.2.3",
     "react-toastify": "^11.0.3",
+    "react-toggle": "^4.1.3",
     "web-vitals": "^4.2.4"
   },
   "scripts": {
